Fix collapsible content on Features field, small CSS adjustment to text overflow in collapsible description

--- a/css/vtm5e.css
+++ b/css/vtm5e.css
@@ -254,6 +254,7 @@ button:focus {
 
 .wod5e p {
     margin: 0.5em;
+    word-break: break-all;
 }
 
 select {
